@@ -4,7 +4,6 @@
 #ifndef __HOMOTOPY_H
 #define __HOMOTOPY_H
 
-#include <stdio.h>
 #include <dolfin/constants.h>
 #include <dolfin/LU.h>
 #include <dolfin/Vector.h>
@@ -59,7 +58,7 @@ namespace dolfin
     void computePath(uint m);
 
     // Compute solution with Newton's method from current starting point
-    void computeSolution(HomotopyODE& ode);
+    bool computeSolution(HomotopyODE& ode);
 
     // Save solution to file
     void saveSolution();
@@ -70,17 +69,17 @@ namespace dolfin
     // Evaluate right-hand side
     void feval(Vector& F, ComplexODE& ode);
 
-    uint n;                  // Size of system
-    uint M;                  // Number of paths
-    uint maxiter;            // Maximum number of iterations
-    real tol;                // Tolerance for Newton's method
-    real divtol;             // Tolerance for divergence of homotopy path
-    bool monitor;            // True if we should monitor the homotopy
-    bool random;             // True if we should choose random initial data
+    uint n;               // Size of system
+    uint M;               // Number of paths
+    uint maxiter;         // Maximum number of iterations
+    real tol;             // Tolerance for Newton's method
+    real divtol;          // Tolerance for divergence of homotopy path
+    bool monitor;         // True if we should monitor the homotopy
+    bool random;          // True if we should choose random initial data
     LinearSolver* solver; // GMRES solver
-    FILE* fp;                // File pointer for saving solution
-    uint* mi;                // Array of local path numbers
-    complex* ci;             // Array of constants for system G(z) = 0
+    std::string filename; // Filename for saving solutions  
+    uint* mi;             // Array of local path numbers
+    complex* ci;          // Array of constants for system G(z) = 0
     Vector x;             // Real-valued vector x corresponding to solution z of F(z) = 0
 
   };
